# my_doc

./: .gitignore  .gitmodules  .vscode-ctags  2021.07.16周报.md  D1使用记录.md  D1测试报告  README.md  SPI_flash_build.md  buildroot_add_pack.md  crawler.py  debian根文件系统构建  debian根文件系统构建.md  git-comit.sh.sh  licheepi-nano使用报告  licheepi-zero使用报告  nano-sd-build.md  nano_flash_build.md  q  s3-测试报告  sd-zero-plus.md  ssh-登陆信息.md  v3s-测试报告  测试使用方法.md
D1_file/: D1_debian镜像使用.md  D1使用记录.md  D1开发一-认识D1开发包.md  D1开发一.md  D1开发三-制作deban系统.md  D1开发二-搭建ubuntu20.04编译环境.md  D1开发杂记.md  D1开发记录.md  D1测试报告  D1烧写工具.md  debian-d1-wlan联网.md  kaifa.md  readme.txt  全志D1移植RTL8723DS.md
D1_file/D1_生产测试/: readme.md
D1测试demo/: README.md  auto_test.py  paizhao
YOLO解释.md/: YOLO通俗解释.md  YOLO通俗解释2.md  YOLO通俗解释3.md  相关网址.txt
_AI/: 检测.md  模型训练.md  资源网站.md
http/: http_multipart_x-mixed-replace.sh  index.html
lib_example/: althttpd.c  framebuffer.c  lin.c  pybin11_testone.cpp  图形处理函数的时间.md  日志行输出.txt
lib_example/QRCode/: detection.py  代码讲解.md
lib_example/QRCode/my_test/: CMakeLists.txt  main.cpp
lib_example/any_test/: xmake.lua
lib_example/arrdio/: read.md
lib_example/c_test/: get_time.c  iconv.cpp  iconv.md  libc.c
lib_example/c_try/: main.c
lib_example/can_demo/: can_read.c  can_read_write.c
lib_example/cmake-example/: CMakeLists.txt  CMakeLists.txt.simple  cmake_变量说明.md  cross.cmake
lib_example/c获取ip地址/: main.c
lib_example/expect/: D1_test_232.sh  D1_test_USB.sh  D1_test_blue.sh  D1_test_blue_master.sh  D1_test_can.sh  D1_test_eth0.sh  D1_test_ssh.sh  expect_picocom.sh
lib_example/framebuffer/: fb_test.md  fbtools.c  fbtools.h
lib_example/linux_uart/: linux_uart.c  linux_uart.h  mf_brd.c  mf_brd.h
lib_example/make-example/: Makefile  Makefile_kernel_module  Makefile_share  Makefile_simple  Makefile_static
lib_example/nanomsgdemo/: ARM和Linux下nanomsg编译与使用.md  bus.c  pubsub.c  发布订阅通信.md  多线程一对一通信.md  多线程通信.md  进程间通信.md
lib_example/python/: SimpleHTTPSServer.py  SimpleHTTPServerWithUpload.py  SimpleHTTPServerWithUpload_python3.py  get_ip.py  netcat.py
lib_example/python_c_module/: test.cpp  test.py
lib_example/python_mjpg_chuanshu/: img_get.py  img_server.py  mjpg.py
lib_example/scons/: Sconstruct
lib_example/stb_truetype/: stb_truetype.c
lib_example/tcpGetpoto/: getPotoFromTcp.py
lib_example/守护进程/: main.cpp
lib_miax_example/: socket_t_img.py
licheepi_nano/: nano-sd-build.md  nano_flash_build.md
licheepi_zero/: SPI_flash_build.md  note.txt  sd_build.md
licheepi_zero_plus/: sd-zero-plus.md
linux-device/: linux驱动1-基本模块.md  linux驱动10-platform总线详解.md  linux驱动13-原子操作及其原理.md  linux驱动14-内核链表list_head.md  linux驱动2-模块参数.md  linux驱动3-字符设备架构.md  linux驱动6-自旋锁spinlock.md  linux驱动8-linuxio模型.md  linux驱动9-等待列队waitq.md
maix_AI/: AI网络综述.md  nn.md  note.md  number_recognize-checkpoint.ipynb  resnet18.md  分类.md  模型转化(专有).md  环境搭建.md  资源网站.md  边缘检测-checkpoint.ipynb
maixpy3/: pwm.md
mcu/51/: 51流水灯程序.c
mcu/gd32/: note.md
mcu/openocd/: WCHLink下载配置.md
note_笔记/: FreeTpye库学习笔记.md  GetUUID.md  LCD_RGB_Backlight.txt  Linux中Wi-Fi无线网络和AP无线热点的配置教程.md  Linux大文件分割和合并.md  Linux配置硬盘自动挂载.txt  Protobuf.md  Python系列之开发.md  QM.md  Tornado.md  USBIP2.0使用.md  Ubuntu20.04固定内核版本.md  ZeroMQ.md  althttpd.md  apt.md  apt密钥操作记录.md  arch折腾笔记.md  arm linux中一些重要的宏及地址定义.md  arm错误.md  awk.md  bash命令  bash命令.md  bash字符串替换.md  bash示列程序.md  bc.md  can记录.md  cmake.md  conan使用.md  coview.md  c的一些函数.txt  diff_patch.md  docker.md  esp32c3_wifi_dap_link.md  expect.md  expect.note  firebird.md  frp配置.md  gcc大小端.md  gcc的扩展函数.md  gcc编译  (+100 more)
opencv笔记/: opencv.md
pytorch_AI/: 环境搭建.md  边缘检测.ipynb
scripts/:  openwrt 断网重启检测脚本.sh  HTTPServerWithUpload3.py  SConstruct  SConstruct_conan  cancelproxy  daemon.sh  dynamic-script.sh  dynamic-start.sh  eth.txt  eth2.sh  eth2.txt  get_bizhi.py  get_mac.sh  git-comit.sh  git-comit.sh.sh  http.server.uplad.python3.py  push_file.sh  pymouseMove.py  pyuinput.py  pyuinput_client.py  pyuinput_server.py  run-one.sh  sdX_temp.sh  setbackground.sh  setproxy  simple_ai.py  simple_ai.sh  sync_time_ssh.sh  test.sh  ubus_build.sh  yunwei.sh
scripts/img_make/: 123.sh  make_rootfs.sh  tempCodeRunnerFile.sh
test/: Makefile
v831/: 资源文件.txt
windows/: vbs语句.md  win32api.md  资源文件.md  软件.md
working/: 2021.09.04周报.md  2021.09.23周报.md  pytind11_no_work_doc.md  work21-7-10.md  work21-8-1.md  work21-8-21.md  work21-8-7.md  图形处理函数的时间.md
zero_sd_img/: read.md
树梅派/: 树梅派操作gpio口.md  树莓派刷机以及三种登入方式（串口、SSH,远程桌面).md
测试/: 屏幕测试说明.txt
源码/DataFlow/: pub.py
源码/cpu_use/: cpu_use  cpu_use.c
源码/go/: nb  nb.go
源码/交叉编译器ldd/: ldd
源码/浮点数转定点数/: C语言模拟实现浮点数-转-定点数.md
源码/自动同步剪切板/: pynng_sync.py  sync_copy.py  sync_copy1.py  sync_copy_pynng.py
源码/设备监控/: device_watch_sqlite3.sh
知识手册/: linux系统调整.md  uboot.md  嵌入式面试题.md  技术小技巧.md  技术记录.md  知识手册总览.md  问题记录.md
知识手册/AI/: AI概念.md  LLM问题问答.md  StackFlow.md  nanodet.md  在GeForceRTX 3090下运行Tensorflow2.md  技术心得.md  模型收集.md  私有的llm服务平台的搭建.md
知识手册/AI基础/: 技术心得.md
知识手册/ax爱芯/: 620u调试坑记录.md  armbian系统适配.md  ax620qp调试记录.md  ax630c_axp修改值南.md  ax650_card调试记录.md  ax650项目记录.md
知识手册/balenaos/: note.md
知识手册/cross-交叉编译工具链制作/: cross-gcc.md  note.md
知识手册/http/: test.py  x-mixed-replace测试.md
知识手册/kvm/: note.md  windows10.xml
知识手册/linux-system/: Linux 支持的驱动列表.txt  Linux内核大法之模块化机制module_init.md  devpts.md  lcd屏幕适配.md  linux-kernl-驱动依赖记录.md  linux-以太网.md  linux-摄像头.md  linux-设备树.md  linux_blue.md  linux内存.md  linux内核模块编译.md  linux音频适配记录.md  linux驱动-应用.md  openwrt_note.md  proc_[pid]文件解读.md  ⁄proc文件解读.md  全志V3s学习记录--ESP8089的使用.md
知识手册/linux_lib/: Linux中pkg-config的使用.md  glibc_compile.md  libev.md  linux_lib.md
知识手册/linux单片机/: node.md
知识手册/linux安全审计/: sample_audit.c
知识手册/linux工具/: ImageMagick.md  apt.md  apt_clone.md  dnsserver.md  ed编辑器.md  hostapd.md  inotify.md  linux DRM⁄KMS.md  modbus工具.md  pip使用.md  soc寄存器读写工具.md  ssh-.md  system.md  tmux.md  ts_lib.md  udhcpd.md  wpa_supplicant.md  日志处理.md  随心记.md
知识手册/linux系统/: linux_kernel.md
知识手册/linux系统编译和制作/: debian系搭建本地镜像源.md  linux-glibc-gcc.md  为V831制作dd镜像.md  镜像制作记录.md
自然数学想象/: 算法.md  维度.md
(+264 files in other folders)
